# felt

./: .gitignore  ANTIGRAV-felt-phase5-boardjs-hang.md  CHANGELOG.md  CODEX-NOTE-coach-and-ui-bugs.md  CODEX-NOTE-range-pdf-extraction.md  CODEX-WP-felt-allin-sidepots-layout.md  CODEX-WP-felt-cards-revk-deck.md  CODEX-WP-felt-contextual-ranges.md  CODEX-WP-felt-newgame-setup-start.md  CODEX-WP-felt-phase3b.md  CODEX-WP-felt-phase3c.md  CODEX-WP-felt-phase3d.md  CODEX-WP-felt-phase3e.md  CODEX-WP-felt-phase4-fixes.md  CODEX-WP-felt-phase4.md  CODEX-WP-felt-phase5-verification-results.md  CODEX-WP-felt-phase5-verification.md  CODEX-WP-felt-phase5.md  CODEX-WP-felt-phase6-ai-coach.md  CODEX-WP-felt-phase7-player-roster.md  CODEX-WP-felt-phase8-tracker-leakfinder.md  CODEX-WP-felt-popups-and-handflow-maths.md  CODEX-WP-felt-ranges-6max-coverage.md  CODEX-WP-felt-roster-import-export-and-seat-picker.md  CODEX-WP-felt-settings-cog-tracker-coach-postflop-leaks.md  CODEX-WP-felt-trainer-depth-roadmap.md  CODEX-WP-felt-weighted-player-types.md  CODEX-WP-felt-winner-badge-bug.md  HAIKU-WP-felt-range-coverage.md  HOW-TO-DISTRIBUTE.md  LICENSE  NOTE-claude-session-findings.md  README.md  SPEC-felt-poker-trainer.md  felt-polish-backlog-table-dressing.md  gap-analysis.md  index.html  package-lock.json  package.json  pokercoaching-rfi-9max.json  (+5 more)
scripts/: FUZZ-NOTES.md  audit-core.mjs  audit-run.mjs  audit.mjs  fuzz-core.mjs  fuzz-run.mjs  fuzz.mjs  json-loader.mjs
src/: main.js  state.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
test/: bet-sizing.test.js  (+44 more)
(+79 files in other folders)
