[package]
name = "app"
version = "0.6.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# OS keychain for the coach API key (Windows Credential Manager / macOS Keychain
# / Linux Secret Service). NOTE: keyring v3 gates each backend behind a feature —
# if the build complains, check current feature names on docs.rs/keyring.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
